# state-tracker-server-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  application-docker.toml  application.toml  build_and_push.sh
.github/workflows/: rust.yml
dep/: cmd_wrapper.sh  docker-compose.yml
dep/docker-entrypoint-initdb.d/: create_database.sql
migrations/: V0__Initialize.sql
migrations/2023-06-12-220516_init/: down.sql  up.sql
migrations/mssql/: V0__Initialize.sql
migrations/postgres/: V0__Initialize.sql
resources/: requests_samples.http
src/: configuration.rs  main.rs  migration.rs
src/api/: actors.rs  amendments.rs  common.rs  mod.rs
src/api/common/: error.rs  pagination.rs
src/api/dto/: actors.rs  actors_addresses.rs  amendments.rs  mod.rs  professions.rs
src/data/: cosmos.rs  entities.rs  mod.rs
src/domain/: actor.rs  actor_address.rs  amendment.rs  mod.rs  profession.rs  schema.rs
