[package]
name = "state-tracker-backend"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "statetracker"
# path = "src/main.rs"

[features]
postgres = ["rbdc-pg"]
mssql = ["rbdc-mssql", "refinery/tiberius-config", "tiberius"]


[dependencies]
actix-web = "4"
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
measure_time = "0.8.2"
rbatis = "4.3.0"
rbdc-mssql = { version = "4.3.1", optional = true }
rbdc-pg = { version = "4.3.4", optional = true }
rbs = "4.3.2"
refinery = { version = "0.8.9", features = ["tiberius-config"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
tiberius = { version = "0.12.2", features = ["tokio", "tokio-util"], optional = true }
tokio = "1.28.0"
tokio-util = "0.7.8"
toml = "0.7.3"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "time", "repr"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

